Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/Subscriptions__c.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB{000000000}</displayFormat>
        <label>Subscriptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>