Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/Filled_Shift_Notification__c.field-meta.xml
<CustomField>
    <fullName>Filled_Shift_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled Shift Notification</label>
    <type>Checkbox</type>
</CustomField>