Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/New_Job_Order_Notification__c.field-meta.xml
<CustomField>
    <fullName>New_Job_Order_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consultant Job Order Notification</label>
    <type>Checkbox</type>
</CustomField>