Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/Supplier_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Email Sent</label>
    <type>Checkbox</type>
</CustomField>