Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/Supplier_Link__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>