Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/Supplier_SLA_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_SLA_Email_Date__c</fullName>
    <formula>Job_Order__r.SLA__c + (Supplier_Link__r.SLA__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier SLA Email Date</label>
    <type>DateTime</type>
</CustomField>