Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/User_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Account_ID__c</fullName>
    <formula>CASESAFEID( User__r.Contact.Account.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Account ID</label>
    <type>Text</type>
</CustomField>