Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/User_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Name__c</fullName>
    <formula>User__r.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Account Name</label>
    <type>Text</type>
</CustomField>