Frankbelford/uatv1ba/force-app/main/default/objects/Subscriptions__c/fields/User_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Type_ID__c</fullName>
    <formula>CASESAFEID(User__r.Contact.Account.RecordType.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Record Type ID</label>
    <type>Text</type>
</CustomField>